Use en-dashes instead of hyphens
So use Redcarpet instead of Kramdown. This commit also makes that change and adds some extension - smart is the one that allows the en-dash shortcut.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,13 @@
 safe: true
 lsi: false
 pygments: true
-markdown: kramdown
+markdown: redcarpet
+redcarpet:
+  extensions:
+    - autolink
+    - no_intra_emphasis
+    - smart
+    - strikethrough
+    - superscript
 
 permalink: /jfdi/:title.html
