Replace redcarpet with kramdown
And make it 'GFM' - Github Flavoured Markdown - which has all the extensions I
had for redcarpet switched on by default.

--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,8 @@
 safe: true
 lsi: false
 pygments: true
-markdown: redcarpet
-redcarpet:
-  extensions:
-    - autolink
-    - no_intra_emphasis
-    - smart
-    - strikethrough
-    - superscript
+
+kramdown:
+  input: GFM
 
 permalink: /jfdi/:title.html
